--- a/index.html
+++ b/index.html
@@ -339,7 +339,14 @@
     <footer
       class="bg-softGreen text-ghostwhite text-center py-2 italic dark:bg-darkBrown"
     >
-      <h4>Direitos reservados à Trybewarts©</h4>
+      <h4>
+        <a
+          href="https://carlosarraes.github.io/"
+          target="_blank"
+          class="text-ghostwhite underline italic dark:bg-darkBrown hover:text-blue-400"
+          >Carlos Arraes - devfolio</a
+        >
+      </h4>
     </footer>
   </body>
 </html>
